--- a/resources/css/cardapio.css
+++ b/resources/css/cardapio.css
@@ -1,4 +1,23 @@
 .header{
     padding: 17px 90px;
-    background-color: red;
+    background-color: rgba(99, 88, 187, 0.659);
+}
+
+.info{
+    border-bottom: 1px solid #dee2e6;
+    width: 100%;
+}
+
+.info .info-item{
+    width: 100%;
+    border-right: 1px solid #d9d9d9;
+    padding: 20px;
+}
+
+.table td, .table tr:first-child{
+    border-top: none;
+}
+
+.table tr{
+    border-top: 1px solid #dee2e6;
 }
