--- a/public/css/cardapio.css
+++ b/public/css/cardapio.css
@@ -1,6 +1,6 @@
 .header{
     padding: 17px 90px;
-    background-color: rgba(99, 88, 187, 0.659);
+    background-color: rgb(211, 159, 78);
 }
 
 .info{
